modified:   astro.config.mjs 	modified:   src/components/Dictionary.tsx 	modified:   src/components/Names.tsx 	deleted:    src/content/docs/fe/history/history.md 	modified:   src/content/docs/ru/basics/words.mdx 	modified:   src/content/docs/ru/history/history.md 	modified:   src/content/i18n/fe.json

--- a/src/content/docs/ru/basics/words.mdx
+++ b/src/content/docs/ru/basics/words.mdx
@@ -29,6 +29,15 @@ description: ...
 
 ### Склонение
 
+|                 | Женский | Мужской | Средний | Множественное | Уменьшительноласкательные |
+| --------------- | ------- | ------- | ------- | ------------- | ------------------------- |
+| Существительное | а       | о       | -       | ы             | я                         |
+
+|         | Женский | Мужской | Средний | Множественное | Уменьшительноласкательные |
+| ------- | ------- | ------- | ------- | ------------- | ------------------------- |
+| Пример  | Котa    | Кото    | -       | Коты          | Котя                      |
+| Перевод | Кошка   | Кот     | -       | Коты          | Котёнок                   |
+
 ## Глагол
 
 ### Время
