--- a/src/content/i18n/fe.json
+++ b/src/content/i18n/fe.json
@@ -1,7 +1,7 @@
 {
   "skipLink.label": "Скiптö эт контент",
-  "search.label": "Файнд",
-  "search.shortcutLabel": "(Жмяттö /, па файндтö)",
+  "search.label": "Пвайнд",
+  "search.shortcutLabel": "(Жмяттö /, па пвайндтö)",
   "search.cancelLabel": "Кансел",
   "search.devWarning": "Поиск доступен только в производственных сборках. \nПопробуйте выполнить сборку и просмотреть сайт, чтобы протестировать его локально.",
   "themeSelect.accessibleLabel": "Прейтö тема",
@@ -11,22 +11,22 @@
   "languageSelect.accessibleLabel": "Прейтö яßатето",
   "menuButton.accessibleLabel": "Менлiст",
   "sidebarNav.accessibleLabel": "Стайко",
-  "tableOfContents.onThisPage": "На эт странiца",
+  "tableOfContents.onThisPage": "Онат эт странiца",
   "tableOfContents.overview": "Айвэскайтö",
-  "i18n.untranslatedContent": "Эт Контент ни аксеснö вiй яßатето фо ню.",
+  "i18n.untranslatedContent": "Эт Контент ни аксеснö вiй нюнö яßатето.",
   "page.editLink": "Едiт странiца",
   "page.lastUpdated": "Ейджнö Амнет:",
   "page.previousLink": "Прекснü",
   "page.nextLink": "Некстнü",
-  "404.text": "Странiца нi бi файндтä. Чектö мензо URL iль трайтö юзтö файнд-бар.",
-  "aside.note": "Note",
-  "aside.tip": "Tip",
+  "404.text": "Странiца нi бi пвайндтä. Чектö мензо URL iль трайтö юзтö пвайнд-бар.",
+  "aside.note": "Нот",
+  "aside.tip": "Хелпмал",
   "aside.caution": "Екса",
   "aside.danger": "Крайнiлов",
 
-  "pagefind.clear_search": "Clear",
+  "pagefind.clear_search": "Чiсттü",
   "pagefind.load_more": "Load more results",
-  "pagefind.search_label": "Search this site",
+  "pagefind.search_label": "Пвайндтö онат эт сайт",
   "pagefind.filters_label": "Filters",
   "pagefind.zero_results": "No results for [SEARCH_TERM]",
   "pagefind.many_results": "[COUNT] results for [SEARCH_TERM]",
