UI перевод (fe/)

--- a/src/content/i18n/fe.json
+++ b/src/content/i18n/fe.json
@@ -1,20 +1,20 @@
 {
-  "skipLink.label": "Скiптö эт контент",
+  "skipLink.label": "Скiптö дi эт контент",
   "search.label": "Пвайнд",
   "search.shortcutLabel": "(Жмяттö /, па пвайндтö)",
   "search.cancelLabel": "Кансел",
   "search.devWarning": "Поиск доступен только в производственных сборках. \nПопробуйте выполнить сборку и просмотреть сайт, чтобы протестировать его локально.",
-  "themeSelect.accessibleLabel": "Прейтö тема",
+  "themeSelect.accessibleLabel": "Прейтö дi тема",
   "themeSelect.dark": "Найкнä",
   "themeSelect.light": "Надннä",
   "themeSelect.auto": "Менахнä",
-  "languageSelect.accessibleLabel": "Прейтö яßатето",
+  "languageSelect.accessibleLabel": "Прейтö дi яßатето",
   "menuButton.accessibleLabel": "Менлiст",
   "sidebarNav.accessibleLabel": "Стайко",
   "tableOfContents.onThisPage": "Онат эт странiца",
   "tableOfContents.overview": "Айвэскайтö",
   "i18n.untranslatedContent": "Эт Контент ни аксеснö вiй нюнö яßатето.",
-  "page.editLink": "Едiт странiца",
+  "page.editLink": "Едiттü эт странiца",
   "page.lastUpdated": "Ейджнö Амнет:",
   "page.previousLink": "Прекснü",
   "page.nextLink": "Некстнü",
@@ -24,7 +24,7 @@
   "aside.caution": "Екса",
   "aside.danger": "Крайнiлов",
 
-  "pagefind.clear_search": "Чiсттü",
+  "pagefind.clear_search": "Чiсттü дi",
   "pagefind.load_more": "Load more results",
   "pagefind.search_label": "Пвайндтö онат эт сайт",
   "pagefind.filters_label": "Filters",
