Главная страница + intro.md

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,12 +1,24 @@
 ---
-title: Язык? | Яßато?
+title: Ferisian Book
+description: Озорэпропвтö пверiснö, па Сакурао.
+head:
+  # Используем свой тег <title>
+  - tag: title
+    content: "Ferisian Book"
 template: splash
 hero:
+  tagline: Изучай ферийский, как Сакурао.
+  image:
+    file: ../../assets/banitea_logo.png
   actions:
+    - text: Пверiйснö
+      link: ./fe/
+      icon: right-arrow
+      variant: primary
     - text: Русский
-      link: ru/
+      link: ./ru/
       icon: right-arrow
-    - text: Ферiйснö
-      link: fe/
-      icon: right-arrow
+      variant: primary
+banner:
+  content: Ферийский разрабатывается одним человеком и, порой, очень стремительно
 ---
