--- a/src/content/docs/ru/index.mdx
+++ b/src/content/docs/ru/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   tagline: Ferisian Book... Обучаться...
   image:
-    file: ../../../assets/Ferisium.png
+    file: ../../../assets/banitea_logo.png
   actions:
     - text: Обучаться
       link: ./basics/alphabet/
