Find input in dictionary

--- a/src/content/docs/fe/basics/dictionary.mdx
+++ b/src/content/docs/fe/basics/dictionary.mdx
@@ -5,4 +5,4 @@ description: ...
 
 import Dictionary from "../../../../components/Dictionary";
 
-<Dictionary lang="fe" />
+<Dictionary lang="fe" client:load />
