--- a/src/content/i18n/fe.json
+++ b/src/content/i18n/fe.json
@@ -13,7 +13,7 @@
   "sidebarNav.accessibleLabel": "Стайко",
   "tableOfContents.onThisPage": "Онат эт странiца",
   "tableOfContents.overview": "Айвэскайтö",
-  "i18n.untranslatedContent": "Эт Контент ни аксеснö вiй нюнö яßатето.",
+  "i18n.untranslatedContent": "Эт Контент нi аксеснö вiй нюнö яßатето.",
   "page.editLink": "Едiттü эт странiца",
   "page.lastUpdated": "Ейджнö Амнет:",
   "page.previousLink": "Прекснü",
