--- a/src/content/docs/fe/index.mdx
+++ b/src/content/docs/fe/index.mdx
@@ -3,7 +3,7 @@ title: Хейле
 description: Озорэпрофтö пверiснö, па Сакурао.
 template: splash
 hero:
-  tagline: Ferisian Book... Озорэпрофтö...
+  tagline: Ferisian Book… Озорэпрофтö…
   image:
     file: ../../../assets/banitea_logo.png
   actions:
