--- a/src/content/docs/ru/index.mdx
+++ b/src/content/docs/ru/index.mdx
@@ -3,7 +3,7 @@ title: Добро пожаловать
 description: Научись ферийскому, как Сакурао.
 template: splash
 hero:
-  tagline: Ferisian Book... Обучаться...
+  tagline: Ferisian Book… Обучаться…
   image:
     file: ../../../assets/banitea_logo.png
   actions:
