--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -20,5 +20,5 @@ hero:
       icon: right-arrow
       variant: primary
 banner:
-  content: Ферийский разрабатывается одним человеком и, порой, очень стремительно
+  content: Новая версия языка в разработке
 ---
