--- a/src/content/docs/ru/basics/word_formation.mdx
+++ b/src/content/docs/ru/basics/word_formation.mdx
@@ -33,10 +33,10 @@ description: ...
 | --------------- | ------- | ------- | ------- | ------------- | ------------------------- |
 | Существительное | а       | о       | -       | ы             | я                         |
 
-|         | Женский | Мужской | Средний | Множественное | Уменьшительноласкательные |
-| ------- | ------- | ------- | ------- | ------------- | ------------------------- |
-| Пример  | Котa    | Кото    | -       | Коты          | Котя                      |
-| Перевод | Кошка   | Кот     | -       | Коты          | Котёнок                   |
+|             | Женский | Мужской | Средний | Множественное | Уменьшительноласкательные |
+| ----------- | ------- | ------- | ------- | ------------- | ------------------------- |
+| **Пример**  | Котa    | Кото    | -       | Коты          | Котя                      |
+| **Перевод** | Кошка   | Кот     | -       | Коты          | Котёнок                   |
 
 ## Глагол
 
@@ -47,6 +47,13 @@ description: ...
 | Прошлое (до глагола) | Настоящее | Будущее (после глагола) |
 | -------------------- | --------- | ----------------------- |
 | бi (было)            | -         | дi (будет)              |
+
+### Составные
+
+|              |     | Основа       | Частица | Дополнение |     | Итог             |
+| ------------ | --- | ------------ | ------- | ---------- | --- | ---------------- |
+| **Оригинал** |     | Юзтö         | iс      | iдiзздтö   |     | Юзтö iс iдiзздтö |
+| **Перевод**  |     | Использовать | к       | Одеваться  |     | Носить           |
 
 ## Неопределённость
 
